--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app"
   },
   "author": "Jean Pierre Peña S",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "nodemon": "^1.18.3"
   }
 }
