--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "jade": "^1.11.0",
+    "json-stringify": "^1.0.0",
+    "mssql": "^3.3.0",
     "nodemon": "^1.18.3"
   }
 }
