--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jean Pierre Peña S",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.16.3",
     "jade": "^1.11.0",
     "json-stringify": "^1.0.0",
