--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "jade": "^1.11.0",
     "json-stringify": "^1.0.0",
+    "leaflet-label": "^0.2.1-0",
     "mssql": "^3.3.0",
     "nodemon": "^1.18.3"
   }
