--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jean Pierre Peña S",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.16.3",
