--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "jade": "^1.11.0",
     "json-stringify": "^1.0.0",
+    "moment": "^2.29.1",
     "mssql": "^3.3.0",
     "nodemon": "^1.18.3"
   }
